# Wavelets

evaluation/CPU/cadwork-gpu/: cadwork-gpu.sh
evaluation/CPU/scripts/: concatenate_results.sh  image.sh  make_all.sh  run_tests.sh  test.sh  threads.sh  tile.sh  utils.sh
implementation/dwt/: 0_512_512.mat  1_512_512.mat  2_512_512.mat  CMakeLists.txt  benchmark.c  benchmark.h  common-amd64-sse.c  common-amd64-sse.h  common.c  common.h  dwt.h  main.c  test.c  test.h
implementation/dwt/cdf53/non-separable/convolution_at/: amd64-sse.c  generic.c
implementation/dwt/cdf53/non-separable/convolution_star/: amd64-sse.c  generic.c
implementation/dwt/cdf53/non-separable/lifting/: amd64-sse.c  generic.c
implementation/dwt/cdf53/separable/lifting/: amd64-sse.c  generic.c
implementation/dwt/cdf97/non-separable/convolution_at/: amd64-sse.c  generic.c
implementation/dwt/cdf97/non-separable/convolution_star/: amd64-sse.c  generic.c
implementation/dwt/cdf97/non-separable/lifting/: amd64-sse.c  generic.c
implementation/dwt/cdf97/non-separable/polyconvolution/: amd64-sse.c  generic.c
implementation/dwt/cdf97/separable/lifting/: amd64-sse.c  generic.c
implementation/dwt/dd137/non-separable/convolution_at/: amd64-sse.c  generic.c
implementation/dwt/dd137/non-separable/convolution_star/: amd64-sse.c  generic.c
implementation/dwt/dd137/non-separable/lifting/: amd64-sse.c  generic.c
implementation/dwt/dd137/separable/lifting/: amd64-sse.c  generic.c
implementation/dwt/haar/: amd64-sse.c  generic.c
reference/reference-haar/: Makefile  forward.c  inverse.c
